testdata/baselines/reference/submodule/conformance/moduleExportNestedNamespaces.errors.txt
mod.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod.js(2,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod.js(5,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod.js(7,14): error TS2339: Property 'p' does not exist on type 'Classic'.
use.js(3,17): error TS2339: Property 'K' does not exist on type '{}'.
use.js(8,15): error TS2694: Namespace '"mod"' has no exported member 'n'.
use.js(9,13): error TS2749: 's.Classic' refers to a value, but is being used as a type here. Did you mean 'typeof s.Classic'?


==== mod.js (4 errors) ====
    module.exports.n = {};
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    module.exports.n.K = function C() {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        this.x = 10;
    }
    module.exports.Classic = class {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        constructor() {
            this.p = 1
                 ~
!!! error TS2339: Property 'p' does not exist on type 'Classic'.
        }
    }
    
==== use.js (3 errors) ====
    import * as s from './mod'
    
    var k = new s.n.K()
                    ~
!!! error TS2339: Property 'K' does not exist on type '{}'.
    k.x
    var classic = new s.Classic()
    
    
    /** @param {s.n.K} c
                  ~
!!! error TS2694: Namespace '"mod"' has no exported member 'n'.
        @param {s.Classic} classic */
                ~~~~~~~~~
!!! error TS2749: 's.Classic' refers to a value, but is being used as a type here. Did you mean 'typeof s.Classic'?
    function f(c, classic) {
        c.x
        classic.p
    }
    